# md-browser

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  electron-builder.signed.yml  index.html  package-lock.json  package.json  styles.css
config/: mihomo-listeners.example.yaml
docs/: client-release-and-upgrade.md  team-install-guide.md  ui-modal-guidelines.md
docs/superpowers/plans/: 2026-06-14-tauri-shell-migration.md
docs/superpowers/specs/: 2026-06-14-tauri-shell-migration-design.md
electron/: main.cjs
mcp/: md-browser-mcp.js
scripts/: build_tauri_web.cjs  clean_dist.cjs  postprocess_unsigned_mac.cjs  preflight_signed_mac.cjs  prepare_release.cjs  prepare_tauri_bundle.cjs  release_manifest.cjs  start_webui.sh  stop_webui.sh  verify_signed_mac.cjs
src/: chrome.js  config.js  embedded-mihomo.js  mcp.js  mihomo.js  ports.js  server.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tests/: chrome.test.js  config.test.js  embedded-mihomo.test.js  mihomo.test.js  ports.test.js  release-manifest.test.js  server.test.js
web/: app.js  identity.html  index.html  styles.css
