[package]
name = "md-browser-shell"
version = "1.1.1"
description = "MD-Browser Tauri shell"
authors = ["MD-Browser contributors"]
license = "MIT"
repository = "https://github.com/csfuwwc/md-browser"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "md_browser_shell"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

[patch.crates-io]
brotli = { path = "../vendor/brotli-8.0.3" }
